--- a/resources/sass/pages/chat.scss
+++ b/resources/sass/pages/chat.scss
@@ -1,13 +1,56 @@
 .chat {
     height: 100vh;
     background: #36393f;
+    color: #fff;
 
     .leftSideMenu {
+        float:left;
         box-sizing: border-box;
         padding-top:16px;
         height: 100vh;
         background: #202225;
         width: 75px;
         text-align: center;
+    }
+
+    .rightSideMenu {
+        position: fixed;
+        right: 0;
+        top:52px;
+        bottom:0;
+        background: #2f3136;
+        width: 250px;
+
+        > span {
+            display: block;
+            text-transform: uppercase;
+            font-size: 12px;
+            color: #a5a5a5;
+            padding: 5px 16px;
+            margin-top: 16px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+
+            li {
+                padding: 5px 16px;
+                color:#63d275;
+            }
+
+            li.offline {
+                color:#47754e;
+            }
+        }
+    }
+
+    .title {
+        margin-left:75px;
+        border-bottom: 1px solid #2b2e33;
+        padding: 16px;
+        text-transform: uppercase;
+        font-size: 16px;
     }
 }
