--- a/resources/sass/pages/chat.scss
+++ b/resources/sass/pages/chat.scss
@@ -53,4 +53,40 @@
         text-transform: uppercase;
         font-size: 16px;
     }
+
+    .messages {
+        margin-left: 75px;
+        margin-right: 250px;
+        padding: 0px 16px 16px;
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+
+            li {
+                margin-top:16px;
+
+                .username {
+                    color: #63d275;
+                    display: block;
+                }
+            }
+        }
+
+        .input {
+            position: fixed;
+            bottom: 16px;
+            left: 75px;
+            right: 250px;
+            padding: 16px;
+
+            input {
+                background: #6f6f6f;
+                border-radius: 5px;
+                padding: 16px;
+                color: #fff;
+            }
+        }
+    }
 }
