--- a/resources/sass/pages/chat.scss
+++ b/resources/sass/pages/chat.scss
@@ -58,6 +58,12 @@
         margin-left: 75px;
         margin-right: 250px;
         padding: 0px 16px 16px;
+        position:fixed;
+        left: 0;
+        right: 5px;
+        top: 52px;
+        bottom: 100px;
+        overflow-y: scroll;
 
         ul {
             list-style-type: none;
@@ -82,7 +88,7 @@
             padding: 16px;
 
             input {
-                background: #6f6f6f;
+                background: #40444b;
                 border-radius: 5px;
                 padding: 16px;
                 color: #fff;
